// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlights under 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <div
      className="search-navigator-facet-highlight-under-container"
    >
      <button
        aria-checked={false}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={2}
        key="2"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        key="3"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`hightlights under selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <div
      className="search-navigator-facet-highlight-under-container"
    >
      <button
        aria-checked={true}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key={2}
        key="2"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
      <button
        aria-checked={true}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        key="3"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="2"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={2}
      key="2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        2
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="3"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={3}
      key="3"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        3
      </span>
    </button>
  </div>
</div>
`;

exports[`renders facet bar chart 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="a"
      className="facet search-navigator-facet projects-facet button-link"
      data-key="a"
      key="a"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        a
      </span>
      <span
        className="facet-stat"
      >
        17
        <div
          className="projects-facet-bar"
        >
          <div
            className="projects-facet-bar-inner"
            style={
              Object {
                "width": 42.5,
              }
            }
          />
        </div>
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="b"
      className="facet search-navigator-facet projects-facet button-link"
      data-key="b"
      key="b"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        b
      </span>
      <span
        className="facet-stat"
      >
        15
        <div
          className="projects-facet-bar"
        >
          <div
            className="projects-facet-bar-inner"
            style={
              Object {
                "width": 37.5,
              }
            }
          />
        </div>
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="c"
      className="facet search-navigator-facet projects-facet button-link"
      data-key="c"
      key="c"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        c
      </span>
      <span
        className="facet-stat"
      >
        24
        <div
          className="projects-facet-bar"
        >
          <div
            className="projects-facet-bar-inner"
            style={
              Object {
                "width": 60,
              }
            }
          />
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders header and footer 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <header />
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="2"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={2}
      key="2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        2
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="3"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={3}
      key="3"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        3
      </span>
    </button>
  </div>
  <footer />
</div>
`;

exports[`renders multiple selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={true}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link active"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <button
      aria-checked={true}
      aria-label="2"
      className="facet search-navigator-facet projects-facet button-link active"
      data-key={2}
      key="2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        2
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="3"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={3}
      key="3"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        3
      </span>
    </button>
  </div>
</div>
`;

exports[`renders no results 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-empty"
  >
    no_results
  </div>
</div>
`;

exports[`renders selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-checked={false}
      aria-label="1"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={1}
      key="1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        1
      </span>
    </button>
    <button
      aria-checked={true}
      aria-label="2"
      className="facet search-navigator-facet projects-facet button-link active"
      data-key={2}
      key="2"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        2
      </span>
    </button>
    <button
      aria-checked={false}
      aria-label="3"
      className="facet search-navigator-facet projects-facet button-link"
      data-key={3}
      key="3"
      onClick={[Function]}
      role="checkbox"
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        3
      </span>
    </button>
  </div>
</div>
`;
